; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_main.c_php_stream_open_for_zend.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_main.c_php_stream_open_for_zend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USE_PATH = common dso_local global i32 0, align 4
@REPORT_ERRORS = common dso_local global i32 0, align 4
@STREAM_OPEN_FOR_INCLUDE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @php_stream_open_for_zend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_stream_open_for_zend(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* @USE_PATH, align 4
  %8 = load i32, i32* @REPORT_ERRORS, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @STREAM_OPEN_FOR_INCLUDE, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @php_stream_open_for_zend_ex(i8* %5, i32* %6, i32 %11)
  ret i32 %12
}

declare dso_local i32 @php_stream_open_for_zend_ex(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
